# boot-k

./: .gitignore  Cargo.toml  NOTE.md  build_all.sh
app-blinky/: Cargo.toml  build_image.sh  edit_image.sh  memory.x  write_image.sh
app-blinky/src/: main.rs
bintool/: Cargo.toml
bintool/src/: main.rs
blxlib/: Cargo.toml
blxlib/src/: crc32.rs  image_header.rs  lib.rs
bootloader/: Cargo.toml  build_image.sh  memory.x  write_image.sh
bootloader/.cargo/: config.toml
bootloader/src/: image_header.rs  lib.rs  main.rs
rp2040-boot2/src/: boot2_ram_memcpy.S
