[package]
edition = "2021"
name = "bootloader"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.9", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"

[dependencies.blxlib]
path = "../blxlib"
